# flick

./: .gitignore  CLAUDE.md  Cargo.toml  设计文档.md
src/: config.rs  local_fs.rs  main.rs  remote_fs.rs  ssh_core.rs  transfer.rs  utils.rs
src/app/: context.rs
src/app/services/: explorer_service.rs  mod.rs  quick_upload_service.rs  settings_service.rs  transfer_service.rs
src/domain/: config.rs  file_entry.rs  mod.rs  ports.rs  transfer.rs
src/infra/: config_store.rs  local_fs.rs  mod.rs  remote_fs.rs
src/infra/ssh/: auth.rs  client.rs  mod.rs  native_fallback.rs  transfer.rs
src/presentation/slint/: mapper.rs  mod.rs  quick_upload_bindings.rs  settings_bindings.rs
src/presentation/slint/explorer/: bookmarks_bindings.rs  local_bindings.rs  mod.rs  remote_bindings.rs  transfer_bindings.rs
src/shared/: path_utils.rs
src/ui_bridge/: convert.rs  explorer.rs  local_browser.rs  mod.rs  quick_upload.rs  remote_browser.rs  settings.rs  transfer_manager.rs
ui/: app.slint  types.slint
ui/components/: confirm_dialog.slint  file_item.slint  path_breadcrumb.slint  server_selector.slint  transfer_item.slint
ui/pages/: settings_page.slint
ui/panels/: local_panel.slint  quick_upload_panel.slint  remote_panel.slint  transfer_panel.slint
ui/theme/: style.slint
