[package]
name = "flick"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI 框架：轻量、Rust 原生、支持实时预览
slint = { version = "1.9", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }

# SSH 核心库
ssh2 = "0.9"

# 配置文件处理 (TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 错误处理
anyhow = "1.0"

# 目录查找 (找 Config 文件用)
dirs = "5.0"

# 文件选择对话框
rfd = "0.12"

# 文件时间格式化
chrono = "0.4"

[build-dependencies]
slint-build = "1.9"

[profile.dev]
debug = 0
incremental = false

[profile.release]
lto = true
strip = true
opt-level = "z"
